# advent-of-code

./: Makefile  README.md  pyproject.toml
2021/code/: day_02a.py  day_02b.py  day_03a.py  day_03b.py  day_05.py  day_08.py  day_09.py
2022/code/: day_01.py
2022/tests/: test_all.py
aoc/: ocr.py  solve.py
aoc/aoc_2015/: day_01.py
aoc/aoc_2021/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py
aoc/aoc_2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_13.py
code/: day_01a.py  day_01b.py  day_06.py  day_18.py
data/2015/: outputs.csv
data/2021/: outputs.csv
data/2022/: outputs.csv
tests/: test_all.py
