[tool.poetry]
name = "advent-of-code"
version = "0.0.1"
description = "Solutions to Advent of Code 2021"
authors = ["Martins Bruveris <martins.bruveris@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
binarytree = "*"
click = "*"
numpy = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.tox
  | \\.venv
  | tmp
)/
"""

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
