[tool.poetry]
name = "advent-of-code"
version = "0.0.1"
description = "Solutions to Advent of Code"
authors = ["Martins Bruveris <martins.bruveris@gmail.com>"]
packages = [
    { include = "aoc" },
]

[tool.poetry.dependencies]
python = "~3.8"
advent-of-code-data = "*"
binarytree = "*"
click = "*"
numpy = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"

[tool.poetry.scripts]
solve = "aoc.solve:cli"

[tool.poetry.plugins."adventofcode.user"]
martins = "aoc.solve:plugin"

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.tox
  | \\.venv
  | tmp
)/
"""

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
